--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" type="text/css" href="contact.css">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
 
+
    <div class="contact">
-    <h1>Contact Me</h1>
+    <header>
+        <h1>Contact Me</h1>
+    </header>
+
     <ul>
 <li><strong>Phone Number:</strong>555-555-5555</li>
 <li><strong></strong>Slack:</strong> emiliygriffith group</li>
