more semantic changes

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,21 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="portfolio.css">
+
 </head>
+
 <body>
 
-    <main>
-<h1>My Coding Projects!</h1>
-<article>My coding work is currently in the works. Check out my protcols practice coding forms. Stay tuned for updates!</article>
+    <nav class="main-nav">
+        <ol>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
+            <li><a href="portfolio.html">Portfolio Work</a></li>
 
-    </main>
+        </ol>
+    </nav>
+
+
+    <div class="projects">
+        <main>
+            <h1>My Coding Projects!</h1>
+            <article>My coding work is currently in the works. Check out my protcols practice coding forms. Stay tuned
+                for updates!</article>
+
+        </main>
+
+    </div>
 
     <ul>
         <li><a href="https://ndoan24.github.io/Basic-HTML-Page/">My Basic-HTML-Page</a></li>
     </ul>
     <!--List all your coding work-->
+
+<img src="https://media3.giphy.com/media/4bjIKBOWUnVPICCzJc/giphy.gif?cid=ecf05e47myyaeooxqwjh78k84l1rh4zja03d2bbvmqbuutvh&rid=giphy.gif"></a>
+
+    <body style="background-color:rgb(218, 215, 83);">
+        
 </body>
+
+<footer>Designed and created by N.D. 2020</footer>
 </html>
