--- a/contact.html
+++ b/contact.html
@@ -1,30 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<link rel="stylesheet" type="text/css" href="contact.css">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <link rel="stylesheet" type="text/css" href="contact.css">
 </head>
+
 <body>
 
+    <nav class="main-nav">
+        <ol>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Contact Me</a></li>
+            <li><a href="portfolio.html">Portfolio Work</a></li>
 
-   <div class="contact">
-    <header>
-        <h1>Contact Me</h1>
-    </header>
+        </ol>
+    </nav>
 
-    <ul>
-<li><strong>Phone Number:</strong>555-555-5555</li>
-<li><strong></strong>Slack:</strong> emiliygriffith group</li>
-<li><strong>Github</strong>ndoan24</li>
-<li><a href="linkedin.com/in/ngocdoan1">Linkedin</a></li>
 
-    </ul>
+    <div class="contact">
+        <header>
+            <h1>Contact Me</h1>
+        </header>
 
+        <ul>
+            <li><strong>Phone Number:</strong> 555-555-5555</li>
+            <li><strong>Slack:</strong> emiliygriffith group</li>
+            <li><strong>Github:</strong> ndoan24</li>
+            <li><a href="linkedin.com/in/ngocdoan1">Linkedin</a></li>
+
+        </ul>
+
+
+
+        <img src=https://media1.giphy.com/media/MEjG5NXKKS68LvGIP2/giphy.gif?cid=ecf05e471wr5iv85z8nh6hi3jqsyvz9n9tohnkzzqw7re5am&rid=giphy.gif"></a>
     </div>
     <!--List all contact info -professional -->
+
+
+    <body style="background-color:rgb(59, 240, 210);">
+
 </body>
+
+<footer>Designed and created by N.D. 2020</footer>
+
 </html>
