more changes to .css

--- a/contact.html
+++ b/contact.html
@@ -25,26 +25,48 @@
         <header>
             <h1>Contact Me</h1>
         </header>
+        <main>
+            <section>
 
-        <ul>
-            <li><strong>Phone Number:</strong> 555-555-5555</li>
-            <li><strong>Slack:</strong> emiliygriffith group</li>
-            <li><strong>Github:</strong> ndoan24</li>
-            <li><a href="linkedin.com/in/ngocdoan1">Linkedin</a></li>
+                <div class="introduction">
+                    <p>**All contact up to date <sub>09/11/2020</sub>
 
-        </ul>
+                        <br>
+                        The purpose of the contact page is to connect with me on my work and learn more about myself.
+
+                    </p>
+                </div>
+                <hr>
 
 
+                <li><strong>Phone Number:</strong> 555-555-5555</li>
+                <li><strong>Slack:</strong> emiliygriffith group</li>
+                <li><strong>Github:</strong> ndoan24</li>
+                <li><a href="linkedin.com/in/ngocdoan1">Linkedin</a></li>
 
-        <img src=https://media1.giphy.com/media/MEjG5NXKKS68LvGIP2/giphy.gif?cid=ecf05e471wr5iv85z8nh6hi3jqsyvz9n9tohnkzzqw7re5am&rid=giphy.gif"></a>
+                </ul>
+
+                <br>
+                <article>The <strong>best method</strong> to <strike>contact me</strike> reach me is by email in the
+                    mornings</article>
+                <br>
+                <article>I am also available during <i>business hours</i> <sup>8:00a.m-5:00p.m.</sup> or by appointment
+                </article>
+
+            </section>
+        </main>
+
+
+        <img
+            src=https://media1.giphy.com/media/MEjG5NXKKS68LvGIP2/giphy.gif?cid=ecf05e471wr5iv85z8nh6hi3jqsyvz9n9tohnkzzqw7re5am&rid=giphy.gif"></a>
     </div>
     <!--List all contact info -professional -->
 
 
     <body style="background-color:rgb(59, 240, 210);">
 
-</body>
+    </body>
 
-<footer>Designed and created by N.D. 2020</footer>
+    <footer>Designed and created by N.D. 2020</footer>
 
 </html>
