--- a/portfolio.html
+++ b/portfolio.html
@@ -11,22 +11,51 @@
 
 <body>
 
-    <nav class="main-nav">
-        <ol>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="contact.html">Contact Me</a></li>
-            <li><a href="portfolio.html">Portfolio Work</a></li>
 
-        </ol>
-    </nav>
+    <header>
+        <nav class="main-nav">
+            <ol>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Contact Me</a></li>
+                <li><a href="portfolio.html">Portfolio Work</a></li>
+
+            </ol>
+        </nav>
+    </header>
+
+    <figure>
+
+        <img src=https://thumbs.gfycat.com/LinedJubilantGelding-max-1mb.gif>Porfolio Gif</a>
+        <figcaption><i>This gif is by gifycat</i></figcaption>
+
+    </figure>
 
 
     <div class="projects">
-        <main>
-            <h1>My Coding Projects!</h1>
-            <article>My coding work is currently in the works. Check out my protcols practice coding forms. Stay tuned
-                for updates!</article>
 
+    <hr>
+        <main>
+            <section>
+                <h1>My Coding Projects!</h1>
+
+                <div class="introduction">
+                <br>
+                <p><strong>The purpose of this <sup>portfolio</sup> page is to showcase my work in coding and web design. My projects
+                    provides an <u><i>opportunity</i></u> to you to see my style, attention to detail, and uniqueness. Feel free to
+                    <strike>navigate</strike> through this page and continue to look back as I progress in this coding journey. Thank you! </strong>
+                </p>
+                <hr>
+
+            </div>
+
+                <article>My coding work is currently in the works. Check out my protcols practice coding forms. Stay
+                    tuned
+                    for updates!</article>
+                <br>
+                <article>This page is a <strong>collection</strong> of <u>my work</u> of <strike>design practice</strike
+                        design and coding in web devlopment <sup>2020</sup> </article>
+
+            </section>
         </main>
 
     </div>
@@ -36,11 +65,13 @@
     </ul>
     <!--List all your coding work-->
 
-<img src="https://media3.giphy.com/media/4bjIKBOWUnVPICCzJc/giphy.gif?cid=ecf05e47myyaeooxqwjh78k84l1rh4zja03d2bbvmqbuutvh&rid=giphy.gif"></a>
+    <img
+        src="https://media3.giphy.com/media/4bjIKBOWUnVPICCzJc/giphy.gif?cid=ecf05e47myyaeooxqwjh78k84l1rh4zja03d2bbvmqbuutvh&rid=giphy.gif"></a>
 
     <body style="background-color:rgb(218, 215, 83);">
-        
-</body>
 
-<footer>Designed and created by N.D. 2020</footer>
+    </body>
+
+    <footer>Designed and created by N.D. 2020</footer>
+
 </html>
